sparseir-capi/include/sparseir.h

/**
 * Opaque kernel type for C API (compatible with libsparseir)
 *
 * This is a tagged union that can hold either LogisticKernel or RegularizedBoseKernel.
 * The actual type is determined by which constructor was used.
 *
 * Note: Named `spir_kernel` to match libsparseir C++ API exactly.
 * The internal structure is hidden using a void pointer to prevent exposing KernelType to C.
 */
typedef struct spir_kernel {
  void *_private;
} spir_kernel;
/**
 * Create a new Logistic kernel
 *
 * # Arguments
 * * `lambda` - The kernel parameter Λ = β * ωmax (must be > 0)
 * * `status` - Pointer to store the status code
 *
 * # Returns
 * * Pointer to the newly created kernel object, or NULL if creation fails
 *
 * # Safety
 * The caller must ensure `status` is a valid pointer.
 *
 * # Example (C)
 * ```c
 * int status;
 * spir_kernel* kernel = spir_logistic_kernel_new(10.0, &status);
 * if (kernel != NULL) {
 *     // Use kernel...
 *     spir_kernel_release(kernel);
 * }
 * ```
 */
 struct spir_kernel *spir_logistic_kernel_new(double lambda, int *status);
/**
 * Get x-segments for SVE discretization hints from a kernel
 *
 * This function should be called twice:
 * 1. First call with segments=NULL: set n_segments to the required array size
 * 2. Second call with segments allocated: fill segments[0..n_segments-1] with values
 *
 * # Arguments
 * * `k` - Kernel object
 * * `epsilon` - Accuracy target for the basis
 * * `segments` - Pointer to store segments array (NULL for first call)
 * * `n_segments` - [IN/OUT] Input: ignored when segments is NULL. Output: number of segments
 *
 * # Returns
 * * `SPIR_COMPUTATION_SUCCESS` on success
 * * `SPIR_INVALID_ARGUMENT` if k or n_segments is null, or segments array is too small
 * * `SPIR_INTERNAL_ERROR` if internal panic occurs
 */

int spir_kernel_get_sve_hints_segments_x(const struct spir_kernel *k,
                                                double epsilon,
                                                double *segments,
                                                int *n_segments);
/**
 * Get y-segments for SVE discretization hints from a kernel
 *
 * This function should be called twice:
 * 1. First call with segments=NULL: set n_segments to the required array size
 * 2. Second call with segments allocated: fill segments[0..n_segments-1] with values
 *
 * # Arguments
 * * `k` - Kernel object
 * * `epsilon` - Accuracy target for the basis
 * * `segments` - Pointer to store segments array (NULL for first call)
 * * `n_segments` - [IN/OUT] Input: ignored when segments is NULL. Output: number of segments
 *
 * # Returns
 * * `SPIR_COMPUTATION_SUCCESS` on success
 * * `SPIR_INVALID_ARGUMENT` if k or n_segments is null, or segments array is too small
 * * `SPIR_INTERNAL_ERROR` if internal panic occurs
 */

int spir_kernel_get_sve_hints_segments_y(const struct spir_kernel *k,
                                                double epsilon,
                                                double *segments,
                                                int *n_segments);
/**
 * Get the number of Gauss points hint from a kernel
 *
 * # Arguments
 * * `k` - Kernel object
 * * `epsilon` - Accuracy target for the basis
 * * `ngauss` - Pointer to store the number of Gauss points
 *
 * # Returns
 * * `SPIR_COMPUTATION_SUCCESS` on success
 * * `SPIR_INVALID_ARGUMENT` if k or ngauss is null
 * * `SPIR_INTERNAL_ERROR` if internal panic occurs
 */

int spir_kernel_get_sve_hints_ngauss(const struct spir_kernel *k,
                                            double epsilon,
                                            int *ngauss);